julOnSaleReact fixing css rule and adding wrapping div

--- a/src/Categories.css
+++ b/src/Categories.css
@@ -10,7 +10,7 @@
     height: 200px;
   }
   
-  .containee:hover {
+  .container:hover {
     outline-style: solid;
     outline-color: #25DDF4;
   }
